; ModuleID = '/home/carl/AnghaBench/TDengine/deps/pthread/extr_ptw32_MCS_lock.c_ptw32_mcs_lock_release.c'
source_filename = "/home/carl/AnghaBench/TDengine/deps/pthread/extr_ptw32_MCS_lock.c_ptw32_mcs_lock_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ptw32_mcs_lock_release(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 3
  %7 = load i32*, i32** %6, align 8
  store i32* %7, i32** %3, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = ptrtoint i32* %9 to i32
  %11 = call i64 @PTW32_INTERLOCKED_EXCHANGE_ADD_SIZE(i32 %10, i32 0)
  %12 = inttoptr i64 %11 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %4, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %14 = icmp eq %struct.TYPE_3__* null, %13
  br i1 %14, label %15, label %34

15:                                               ; preds = %1
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = ptrtoint i32* %17 to i32
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %20 = ptrtoint %struct.TYPE_3__* %19 to i32
  %21 = call i64 @PTW32_INTERLOCKED_COMPARE_EXCHANGE_PTR(i32 %18, i32 0, i32 %20)
  %22 = inttoptr i64 %21 to %struct.TYPE_3__*
  %23 = icmp eq %struct.TYPE_3__* %16, %22
  br i1 %23, label %24, label %25

24:                                               ; preds = %15
  br label %38

25:                                               ; preds = %15
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 2
  %28 = call i32 @ptw32_mcs_flag_wait(i32* %27)
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  %31 = ptrtoint i32* %30 to i32
  %32 = call i64 @PTW32_INTERLOCKED_EXCHANGE_ADD_SIZE(i32 %31, i32 0)
  %33 = inttoptr i64 %32 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %33, %struct.TYPE_3__** %4, align 8
  br label %34

34:                                               ; preds = %25, %1
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = call i32 @ptw32_mcs_flag_set(i32* %36)
  br label %38

38:                                               ; preds = %34, %24
  ret void
}

declare dso_local i64 @PTW32_INTERLOCKED_EXCHANGE_ADD_SIZE(i32, i32) #1

declare dso_local i64 @PTW32_INTERLOCKED_COMPARE_EXCHANGE_PTR(i32, i32, i32) #1

declare dso_local i32 @ptw32_mcs_flag_wait(i32*) #1

declare dso_local i32 @ptw32_mcs_flag_set(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
